# reg_monitor

./: Cargo.toml  add_reg.bat  delete_reg.bat
src/: main.rs  notify_software_change.rs  software_manager.rs  software_util.rs  util.rs
